# windowpicker-rs

./: Cargo.toml  LICENSE  README.md
src/: bin.rs  lib.rs
